# CRM-DASHBOARD

./: .gitignore  .replit  .vercelignore  README_REACT.md  app.py  freeze  main.py  models.py  pyproject.toml  replit.md  requirements.txt  routes.py
instance/: opai_crm.db
static/css/: styles.css
static/js/: leads.js  main.js  messages.js
templates/: base.html  contact_schedule_form.html  dashboard.html  lead_detail.html  lead_form.html  leads.html  login.html  message_form.html  message_templates.html  register.html  scheduled_contacts.html  scheduled_messages.html  settings.html  template_form.html  twilio_status.html  whatsapp_batch_prepare.html  whatsapp_batch_send.html  whatsapp_bulk_send.html  whatsapp_connect.html  whatsapp_connect_qr.html  whatsapp_send.html  whatsapp_send_alternative.html  whatsapp_send_success.html
utils/: scheduler.py  twilio_service.py  whatsapp_service.py
