[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Backend API"
requires-python = ">=3.11"

dependencies = [
    "flask>=3.1.0",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "sqlalchemy>=2.0.40",
    "werkzeug>=3.1.3",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "apscheduler>=3.11.0",
    "markupsafe>=3.0.2"
]
